working on aligning buttons correctly

--- a/mywebsite/staticfiles/css_files/main.css
+++ b/mywebsite/staticfiles/css_files/main.css
@@ -1,35 +1,54 @@
 #pagewrapper {
 	border: 2px black solid;
-	min-height: 500px;
+	min-height: 450px;
+	min-width: 800px;
+	padding:  3px;
 }
 
 #wholepage {
-	width: 500px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: auto;
-	margin-bottom: auto;
+	width: 800px;
+	font-family: monospace; 
+	font-size: 15px;
+	margin:  auto;
 }
 
 .heading {
 	text-align: center;	
-	border:  1px black solid;
+	border-bottom:  1px black solid;
+	font-size: 20px;
+}
+
+.left-col {
+	width: 40%;
+	float: left;
+	padding: 1px;		
+}
+
+.center-col, .right-col {
+	width: 25%;
+	float: left;
+	padding: 1px;	
+	line-height: 175%;
 }
 
 .links {
-	text-align: center;
-	font-family: monospace;
-	float: left;
+	margin-left: 50px;
+	margin-right: 50px;
+
 	border:solid black;
 	border-radius: 20px 20px 20px 20px;
     color: black;
-    padding: 14px 16px;
+    padding: 20px 28px;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .links:hover {
 	color: white;
 	background-color: black;
 	border: solid hotpink;
+}
+
+.footer {
+	/*font-family: monospace;*/
 }
